# glowing-guacamole

./: Dockerfile  Readme.md  out.json  package.json  pyproject.toml  scrape.py  seccomp_profile.json
.github/workflows/: scrape.yaml
tests/: productPage.ts  scrape.spec.ts
tests/models/: productPage.ts  types.ts  website.ts
