[tool.poetry]
name = "glowing-guacamole"
version = "0.1.0"
description = ""
authors = ["Sidharth Vinod <sidharthv96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.16.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
